# l10n-tools

./: pyproject.toml
.github/workflows/: ci.yaml
l10n_parser/: __init__.py  android.py  base.py  defines.py  dtd.py  fluent.py  ini.py  po.py  properties.py
